--- a/api-scanner/src/test/resources/generate-empty-api/build.gradle
+++ b/api-scanner/src/test/resources/generate-empty-api/build.gradle
@@ -8,7 +8,7 @@ apply from: 'repositories.gradle'
 
 description 'Test generating overall API file without any jars'
 
-jar {
+tasks.named('jar', Jar) {
     enabled = false
 }
 
@@ -16,7 +16,7 @@ scanApi {
     verbose = true
 }
 
-task generateApi(type: GenerateApi) {
+tasks.register('generateApi', GenerateApi) {
     baseName = 'generate-empty-api'
     version = ''
 }
