--- a/api-scanner/src/test/resources/generate-scan-classifier/build.gradle
+++ b/api-scanner/src/test/resources/generate-scan-classifier/build.gradle
@@ -16,7 +16,7 @@ sourceSets {
     }
 }
 
-jar {
+tasks.named('jar', Jar) {
     archiveBaseName = "scanned"
     archiveClassifier = 'target'
 }
@@ -26,7 +26,7 @@ scanApi {
     targetClassifier = 'target'
 }
 
-task generateApi(type: GenerateApi) {
+tasks.register('generateApi', GenerateApi) {
     baseName = 'generate-scan-classifier'
     version = ''
 }
