--- a/api-scanner/src/test/resources/generate-scan-disabled/build.gradle
+++ b/api-scanner/src/test/resources/generate-scan-disabled/build.gradle
@@ -16,7 +16,7 @@ sourceSets {
     }
 }
 
-jar {
+tasks.named('jar', Jar) {
     archiveBaseName = "scanned"
 }
 
@@ -25,7 +25,7 @@ scanApi {
     enabled = false
 }
 
-task generateApi(type: GenerateApi) {
+tasks.register('generateApi', GenerateApi) {
     baseName = 'generate-scan-disabled'
     version = ''
 }
