--- a/api-scanner/src/test/resources/generate-scan-property-classifier/build.gradle
+++ b/api-scanner/src/test/resources/generate-scan-property-classifier/build.gradle
@@ -23,7 +23,7 @@ sourceSets {
     }
 }
 
-jar {
+tasks.named('jar', Jar) {
     archiveBaseName = 'scanned'
     archiveClassifier = 'target'
 }
@@ -32,7 +32,7 @@ scanApi {
     verbose = true
 }
 
-task generateApi(type: GenerateApi) {
+tasks.register('generateApi', GenerateApi) {
     baseName = 'generate-scan-property-classifier'
     version = ''
 }
